// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`captionSide renders 0 1`] = `
Array [
  .c0 {
  caption-side: 0;
}

<div
    className="c0"
  />,
  .c0 {
  caption-side: 0;
}

<div
    className="c0"
  />,
  .c0 {
  caption-side: 0;
}

<div
    className="c0"
  />,
  .c0 {
  caption-side: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`captionSide renders function 1`] = `
Array [
  .c0 {
  caption-side: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  caption-side: has;
}

<div
    className="c0"
  />,
  .c0 {
  caption-side: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  caption-side: has;
}

<div
    className="c0"
  />,
]
`;

exports[`captionSide renders invalid theme path 1`] = `
Array [
  .c0 {
  caption-side: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  caption-side: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  caption-side: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  caption-side: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`captionSide renders negative number 1`] = `
Array [
  .c0 {
  caption-side: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  caption-side: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  caption-side: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  caption-side: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`captionSide renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    caption-side: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caption-side: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caption-side: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    caption-side: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    caption-side: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caption-side: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caption-side: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    caption-side: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    caption-side: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caption-side: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caption-side: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    caption-side: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    caption-side: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caption-side: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caption-side: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    caption-side: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`captionSide renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    caption-side: July;
  }
}

@media April {
  .c0 {
    caption-side: August;
  }
}

@media January {
  .c0 {
    caption-side: September;
  }
}

@media April {
  .c0 {
    caption-side: November;
  }
}

@media June {
  .c0 {
    caption-side: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    caption-side: July;
  }
}

@media April {
  .c0 {
    caption-side: August;
  }
}

@media January {
  .c0 {
    caption-side: September;
  }
}

@media April {
  .c0 {
    caption-side: November;
  }
}

@media June {
  .c0 {
    caption-side: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    caption-side: January;
  }
}

@media April {
  .c0 {
    caption-side: December;
  }
}

@media January {
  .c0 {
    caption-side: April;
  }
}

@media April {
  .c0 {
    caption-side: May;
  }
}

@media June {
  .c0 {
    caption-side: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    caption-side: January;
  }
}

@media April {
  .c0 {
    caption-side: December;
  }
}

@media January {
  .c0 {
    caption-side: April;
  }
}

@media April {
  .c0 {
    caption-side: May;
  }
}

@media June {
  .c0 {
    caption-side: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`captionSide renders postitive number 1`] = `
Array [
  .c0 {
  caption-side: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  caption-side: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  caption-side: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  caption-side: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`captionSide renders string 1`] = `
Array [
  .c0 {
  caption-side: July;
}

<div
    className="c0"
  />,
  .c0 {
  caption-side: July;
}

<div
    className="c0"
  />,
  .c0 {
  caption-side: June;
}

<div
    className="c0"
  />,
  .c0 {
  caption-side: June;
}

<div
    className="c0"
  />,
]
`;

exports[`captionSide renders valid theme path 1`] = `
Array [
  .c0 {
  caption-side: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  caption-side: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  caption-side: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  caption-side: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
